# Think-Tank

./: # Agentic R.A.G. System for Agent C.txt  # THINKTANK Ultimate End-to-End Opt.txt  # 🏁  THINKTANK-IO – “One-Click Go-.txt  # 🕸️ crawl4ai – End-to-End GatherV.txt  .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  System Architecture for RAG.txt  TaskChecklist.test.tsx  TaskChecklist.tsx  TaskContext.tsx  TaskDashboard.tsx  TaskForm.tsx  TaskItem.tsx  advanced-integration-tutorials.md  agentic_parser.py  caching.py  config.py  database_optimizations.py  deployment_validator.py  docker-compose.enhanced.yml  docker-compose.yml  feedback_collector.tsx  frontend-backend-integration.md  integrated_solution.md  kong.yml  main.py  models.py  next.config.js  package-lock.json  package.json  page.tsx  pasted_content.txt  pyproject.toml  rag_engine.py  requirements.txt  schemas.py  secrets_manager.py  (+16 more)
app/: layout.tsx  page.tsx
app/api/auth/: route.ts
apps/ai-agent/: pyproject.toml
apps/backend/: main.py  pyproject.toml  tasks.py
apps/backend/tests/: test_main.py  test_tasks.py
apps/frontend/: package.json
components/: TaskChecklist.tsx
context/: TaskContext.tsx
docs/: Deployment-Monitoring-Plan.md  Think-Tank-Infrastructure-Plan.md
examples/: README.md  TaskComponent.tsx
examples/api/: tasks.ts
examples/backend/: task_endpoint.py
examples/utils/: api-client.ts
infra/ci-cd/: github-actions.yml
infra/docker/: Dockerfile.ai-agent  Dockerfile.backend  Dockerfile.frontend
scripts/: check-supabase-setup.js
utils/: supabase.ts
(+9 files in other folders)
